feat: Add generic rule engine and field dictionary API
Co-authored-by: felipesp1983work <felipesp1983work@gmail.com>